--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -259,4 +259,59 @@ h2{
 	position: absolute;
 	bottom: 100px;
 	left: 100%;
+}
+@media (min-width: 992px) {
+
+}
+
+@media (max-width: 992px) {
+	.logo:after {
+		width: 100%;
+	}
+	.logo:before {
+		width: 100%;
+		height: 550px;
+		left: 50%;
+		top: -17%;
+		margin: 0;
+	}
+	.logo img{
+		width: 100%;
+	}
+	.bg-m{
+		width: 380px;
+		height: 380px;
+		position: absolute;
+		opacity: 0.4;
+		background-size: 100%;
+	}
+	.justify-content-md-center {
+		text-align: center;
+	}
+	.justify-content-md-center .cover-list-item img {
+		margin: auto;
+		width: 80%;
+	}
+	.bg-el1 {
+		top: 1775px;
+		right: 54%;
+	}
+	.bg-el2 {
+		top: 795px;
+		left: 54%;
+		width: 178px;
+		background-size: 500px;
+		background-position-x: -19px;
+	}
+	.bg-el3 {
+		top: 2287px;
+		left: 50%;
+		width: 196px;
+		background-size: 500px;
+		background-position-x: -19px;
+	}
+	.bg-el4 {
+		top: 2902px;
+		left: 3%;
+	}
 }
